--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 		<script> (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){ (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o), m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m) })(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-51272720-2', 'auto'); ga('send', 'pageview');
 		</script>
 		<div id='highScoreInGameText'>
-			<div id='highScoreInGameTextHeader'>ĐIỂM CAO NHẤT</div><div id='currentHighScore'>10292</div>
+			<div id='highScoreInGameTextHeader'>PHỤC NÓI ĐIỂM CAO NHẤT</div><div id='currentHighScore'>10292</div>
 		</div>
 		<div id="gameoverscreen">
 			<div id='container'>
-				<div id='gameOverBox' class='GOTitle'>GAME OVER</div>
+				<div id='gameOverBox' class='GOTitle'>PHỤC NÓI GAME OVER</div>
 				<div id='cScore'>1843</div>
 				<div id='highScoresTitle' class='GOTitle'>ĐIỂM KỶ LỤC</div>
 				<div class='score'><span class='scoreNum'>1.</span> <div id="1place" style="display:inline;">0</div></div>
